added pause, restart, and start functions

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title></title>
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P"
       rel="stylesheet">
+
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <script src="./bundle.js"></script>
     <link rel="stylesheet" href="./application.css">
@@ -12,6 +13,11 @@
   </head>
   <body>
     <div class="game">
+
+        <h1 class="game-title">
+          <!-- <span style="color:#2FFFFF">T</span><span style="color: #FA980B">e</span style="color: #1700FA"><span style="color: #8500FB">t</span style="color: #F7FF1F"><span style="color: #F80009">r</span><span style="color: #27FF09">i</span><span style="color: #1700FA">s</span> -->
+          Tetris
+        </h1>
         <div class="game-console">
           <div class="rows">
             <div class="left-row">
