--- a/index.html
+++ b/index.html
@@ -43,10 +43,14 @@
                 </div>
                 <canvas id="score-level-canvas" width="50" height="100"></canvas>
               </div>
+              <div class="movement">
+                <p>Left/ Right Keys to Move Piece</p>
+                <p>Up to Rotate Piece</p>
+              </div>
               <div class="instructions">
-                <p>Press Enter to Play</p>
-                <p>Press P to Pause/Play</p>
-                <p>Press R to Restart</p>
+                <p>Enter to Play</p>
+                <p>P to Pause/Play</p>
+                <p>R to Restart</p>
               </div>
             </div>
           </div>
