--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
                 <canvas id="score-level-canvas" width="50" height="100"></canvas>
               </div>
               <div class="movement">
-                <p>Left/ Right Keys to Move Piece</p>
-                <p>Up to Rotate Piece</p>
+                <p>Left/ right keys to move piece</p>
+                <p>Up to rotate piece</p>
               </div>
               <div class="instructions">
-                <p>Enter to Play</p>
-                <p>P to Pause/Play</p>
-                <p>R to Restart</p>
+                <p>Enter to play</p>
+                <p>P to pause/play</p>
+                <p>R to restart</p>
+                <p>M to mute/unmute</p>
               </div>
             </div>
           </div>
