--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
               </div>
               <div class="instructions">
-                <p>Left/right/down keys to move piece</p>
+                <p>Left/right<br>/down keys to move piece</p>
                 <p>Up to rotate piece</p>
                 <p>Enter to play</p>
                 <p>P to pause/play</p>
